🔧 chore(dockerfiles): switch from latest to alpine images
Updated Dockerfiles for npm, pip, and pip3 to use the alpine version
of Node.js and Python instead of the latest tag. This change reduces
the image size and improves security by using a more stable base image.

--- a/dockerfiles/pip/Dockerfile
+++ b/dockerfiles/pip/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Python image
-FROM python:latest
+FROM python:alpine
 
 # Copy the contents of the dist directory to the root directory of the container
 COPY dist/bin/ /ipm/
