🔧 chore: remove outdated SVG images and add new social media preview assets; update documentation for improved readability and clarity.

--- a/docs/pages/_config.yml
+++ b/docs/pages/_config.yml
@@ -2,9 +2,12 @@ theme: jekyll-theme-cayman
 favicon_emoji: 📦
 repository_name: ipm
 title: ipm - Integrated Package Manager
-description: A cross-platform tool that unifies CLI for various package managers, simplifies installation, updates, and removal of packages by standardizing commands.
+description:
+  A cross-platform tool that unifies CLI for various package managers,
+  simplifies installation, updates, and removal of packages by standardizing
+  commands.
 show_downloads: true
 collections:
   pages:
-    output: true          # Generates HTML files for each file
-    permalink: /:path/    # URL structure for collection items
+    output: true # Generates HTML files for each file
+    permalink: /:path/ # URL structure for collection items
