🔧 chore(cspell): update words list for spell checking
Added new words to the CSpell configuration to enhance spell checking
accuracy. This includes terms related to Docker and additional project
specific terminology. The changes ensure that these words are recognized
as correct, reducing false positives during spell checks.

No breaking changes.

--- a/.cspell.yaml
+++ b/.cspell.yaml
@@ -36,10 +36,13 @@ words:
   - contextmanager
   - ctypes
   - deskcolor
+  - dockerfile
+  - dockerfiles
   - docname
   - docstrings
   - dotenv
   - dotenvs
+  - dpkg
   - dshow
   - eopkg
   - esbenp
@@ -48,11 +51,14 @@ words:
   - fflags
   - firstparty
   - foxundermoon
+  - gojsonpointer
+  - gojsonreference
   - gojsonschema
   - guix
   - httptools
   - idna
   - imfsiddiqui
+  - inconshreveable
   - inkscape
   - inlinevar
   - ipm
