🔧 chore(assets): add favicon.svg and update references
Added a new favicon.svg file to the assets/icons directory for improved branding. Updated the favicon link in head-custom.html to reference the new SVG file instead of using an inline SVG. Adjusted the _config.yaml to ensure the emoji is set correctly for the site. This change enhances the visual identity of the project and ensures proper favicon display across browsers.

--- a/docs/pages/_config.yaml
+++ b/docs/pages/_config.yaml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-cayman
-favicon_emoji: 📦
 repository_name: ipm
 title: ipm - Integrated Package Manager
+emoji: 📦
 description:
   A cross-platform tool that unifies CLI for various package managers,
   simplifies installation, updates, and removal of packages by standardizing
